--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ws-communicator",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A communication library using websockets",
   "main": "dist/index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "author": "Zac McChesney",
   "license": "MIT",
   "dependencies": {
+    "eventemitter3": "4.0.0",
     "ws": "7.2.1"
   },
   "optionalDependencies": {
